--- a/src/assets/styles/_template.scss
+++ b/src/assets/styles/_template.scss
@@ -1,6 +1,12 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import './reset';
 
-html {
+html,
+body {
+  height: 100%;
+}
+
+* {
+  font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
 }
