--- a/src/features/todo/TodoList/TodoList.scss
+++ b/src/features/todo/TodoList/TodoList.scss
@@ -8,17 +8,42 @@
     display: flex;
     height: 40px;
     margin-left: 0;
+    margin-bottom: 1em;
 
     input {
-      height: 40px;
-      margin: 0;
-      margin-right: 0.75em;
-      width: 36px;
+      cursor: pointer;
+      opacity: 0;
+      position: absolute;
+
+      & + label:before {
+        background-color: $white;
+        border: 1px solid $light-blue;
+        border-radius: 8px;
+        content: '';
+        cursor: pointer;
+        display: inline-block;
+        height: 40px;
+        margin-right: 1.25em;
+        width: 36px;
+      }
+
+      &:checked {
+        & + label {
+          text-decoration: line-through;
+        }
+
+        & + label:before {
+          background-color: $light-blue;
+        }
+      }
     }
 
-    span {
+    label {
+      align-items: center;
+      cursor: pointer;
+      display: flex;
       line-height: calc(40px - 0.6em);
-      padding: 0.6em;
+      padding: 0.6em 0.6em 0.6em 0;
     }
   }
 }
